Refactor tests to use List.of() for role assignments, improve mock implementations, and enhance cache miss event handling
- Updated user role assignments in tests to use List.of() instead of Arrays.asList().
- Introduced MockComicStorageFacade for better isolation in cache-related tests.
- Enhanced CacheUtils tests to utilize mock data setup for comic items.
- Improved ImageCacheStatsUpdaterTest and other tests by removing unnecessary file operations.
- Added CacheMissEvent class to handle cache miss notifications.
- Refactored various test classes to streamline setup and improve readability.